test/should-fail/jfxc2293base.fx
/**
 * @subtest jfxc2293.fx
 */

public class jfxc2293base {
    public      var zero:  Integer = 0;
    public-read var one:   Integer = 0;
    public-init var two:   Integer = 0;
    public      def three: Integer = 0;
                var four:  Integer = 0;
} 
